Implement wish-start-date
